# src/config/swagger.json
@@ -48,7 +48,7 @@
         ],
         "responses": {
           "201": {
-            "description": "user account created successfully",
+            "description": "",
             "schema": {
               "$ref": "#/definitions/AuthResponse"
             }
@@ -98,6 +98,66 @@
         }
       }
     },
+    "/users/reset": {
+      "post": {
+        "tags": ["auth"],
+        "summary": "Sends a registered user a password reset link",
+        "description": "This endpoint registers sends a registered user a link to reset their password",
+        "operationId": "resetPassword",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "security": [],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Information needed send a user a password reset link",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/passwordReset"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/passwordResetResponse"
+            }
+          }
+        }
+      }
+    },
+    "/users/reset/:token": {
+      "patch": {
+        "tags": ["auth"],
+        "summary": "Updates a registered user password",
+        "description": "This endpoint updates the user password in the database",
+        "operationId": "updatePassword",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "security": [],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Information needed to update the user password",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/updatePassword"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/updatePasswordResponse"
+            }
+          }
+        }
+      }
+    },
     "/requests": {
       "post": {
         "tags": ["request"],
@@ -140,21 +200,55 @@
     }
   },
   "definitions": {
-    "Signup": {
+    "PasswordReset": {
       "type": "object",
       "properties": {
-        "firstName": {
-          "type": "string"
-        },
-        "lastName": {
-          "type": "string"
-        },
         "email": {
           "type": "string"
-        },
+        }
+      }
+    },
+    "UpdatePassword": {
+      "type": "object",
+      "properties": {
         "password": {
-          "type": "string",
-          "format": "password"
+          "type": "string"
+        }
+      }
+    },
+    "UpdatePasswordResponse": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string"
+        },
+        "data": {
+          "id": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "createdAt": {
+            "type": "date"
+          },
+          "updatedAt": {
+            "type": "date"
+          }
+        },
+        "message": {
+          "type": "string"
+        }
+      }
+    },
+    "PasswordResetResponse": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string"
+        },
+        "message": {
+          "type": "string"
         }
       }
     },
@@ -216,13 +310,13 @@
                 "type": "integer",
                 "format": "int64"
               },
-              "email": {
-                "type": "string"
-              },
               "firstName": {
                 "type": "string"
               },
               "lastName": {
+                "type": "string"
+              },
+              "email": {
                 "type": "string"
               }
             }
