# src/routes/userRoute.js
@@ -19,4 +19,13 @@ userRoute.post(
   UserController.signin
 );
 
+userRoute
+  .post('/users/reset', UserController.resetPassword)
+  .get('/users/reset/:token', UserController.updatePassword)
+  .patch(
+    '/users/reset/:token',
+    validation.validate('updatePassword'),
+    UserController.updatePassword
+  );
+
 export default userRoute;
